// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseData can parse json 1`] = `
{
  "foo": 2,
}
`;

exports[`parseData can parse yaml 1`] = `
{
  "foo": 2,
  "source": "foo: 2",
}
`;

exports[`parseData returns a blank object if it can't parse 1`] = `{}`;

exports[`parseData returns a blank object if it can't parse 2`] = `{}`;

exports[`parseData returns a blank object if it can't parse 3`] = `{}`;
